# torchlpc

./: .gitignore  CITATION.cff  README.md  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
cpp/: CMakeLists.txt  experiments.py  torchlpc.cpp
tests/: benchmark_forward.py  test_forward.py  test_grad.py  test_hessian.py  test_vmap.py
torchlpc/: __init__.py  core.py  parallel_scan.py  recurrence.py
torchlpc/csrc/: CMakeLists.txt  experiments.py  torchlpc.cpp
